feat: add support for appointments pagging
